deploy/dify/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dify-minio
  namespace: dev-dify
spec:
  type: ExternalName
  externalName: minio.dev-dify.ctc.local

---

apiVersion: v1
kind: Service
metadata:
  name: dev-dify-minio
  namespace: dev-dify
spec:
  type: ExternalName
  externalName: minio.dev-dify.ctc.local
