deploy/dify/network-policy-kubelet.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-node-probe
  namespace: dev-dify
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 10.10.0.0/24
    ports:
    - protocol: TCP
      port: 8084
    - protocol: TCP
      port: 8080
    - protocol: TCP
      port: 80
